--- a/app/src/main/res/layout/upload.xml
+++ b/app/src/main/res/layout/upload.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="456dp"
-        android:layout_height="784dp"
+        android:layout_width="371dp"
+        android:layout_height="722dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -20,15 +20,14 @@
 
     <Button
         android:id="@+id/goto_insurance"
-        android:layout_width="144dp"
-        android:layout_height="91dp"
-        android:text="Button"
-        android:visibility="invisible"
+        android:layout_width="153dp"
+        android:layout_height="87dp"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.152"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.345" />
+        app:layout_constraintVertical_bias="0.333" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
